@@ -13,3 +13,4 @@ ltmain.sh
 ltconfig
 stamp-h.in
 stamp-hconfig.h.in
+ABOUT-NLS
