@@ -1,3 +1,14 @@
+2000-01-02  Timur Bakeyev <mc@bat.ru>
+
+	* po/uk.po: Add missed "\n" in 2 strings. Things sholud be checked 
+	before commit :)
+	
+	* backends/Makefile.am, wrappers/gtk/Makefile.am: Add $(top_builddir)/gconf
+	to INCLUDES to make GConf.h visiable.
+
+	* gconf/gconf-internals.c: If LC_MESSAGE doesn't exist, use value of
+	LC_CTYPE (is this correct?)
+		
 1999-12-31  Yuri Syrota  <rasta@renome.rovno.ua>
 
 	* configure.in: Added "uk" to ALL_LINGUAS
